--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </div>
 
 
-<div class="container mt-5">
-    <div class="row" id="workout-div">
+<div class="container mt-2">
+    <div class="row row-cols-4" id="workout-div">
     </div>
 </div>
 
