--- a/workout.html
+++ b/workout.html
@@ -14,6 +14,9 @@
     </div>
 </div>
 
+<div class="text-center">
+<a href="index.html" class="btn btn-outline-secondary">Return</a>
+</div>
 </body>
 <script src="workout.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
