--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 <div class="container mt-2">
-    <div class="row row-cols-4" id="workout-div">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4" id="workout-div">
     </div>
 </div>
 
